testsuite/tests/checks/abort_statements/test.out
abort_statements.adb:10:7: error: abort statement
10 |       abort T; -- FLAG
   |       ^^^^^^^^ 

